--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="stylesheet" href="./src/css/style.css" />
     <link rel="stylesheet" href="./src/css/root.css" />
+    <link rel="stylesheet" href="./src/css/responsive.css" />
 
     <!-- LINK FONT -->
 
@@ -146,3 +147,4 @@
     </footer>
   </body>
 </html>
+
